--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 19 Aug 2004
-  Last Modified: 28 May 2007
+  Last Modified: 2 Jun 2007
   Number: 4
-  Version: 58
+  Version: 59
 
 This document summarizes Apocalypse 4, which covers the block and
 statement syntax of Perl.
@@ -255,9 +255,10 @@ within the body of the loop.  See below.
 
 The value of a loop statement is the list of values from each
 iteration that successfully completed without a C<next> or C<last>.
-(This list is actually a multidimensional list (a "multislice")
-with dimensional boundaries at each iteration.  Most list contexts
-ignore these boundaries and flatten the list.)  If you do not wish
+(This list is actually a two-dimensional list of Captures (a "slice")
+with dimensional boundaries at each iteration.  List context
+ignores these boundaries and flattens the list.  Slice context turns
+the captures into subarrays)  If you do not wish
 to accidentally return a list from the final loop statement in a
 subroutine, place an explicit return statement after it, or declare
 a return type of C<Void>.
@@ -537,8 +538,8 @@ by the C<take> to its own context is that same C<Capture> object (which
 is ignored when the C<take> is in void context).  Regardless of the
 C<take>'s context, the C<Capture> object is also added to the list of
 values being gathered, which is returned by the C<gather> in the form
-of a lazy multislice, with each slice corresponding to one C<take>
-capture.  (A multislice is lazily flattened in normal list context,
+of a lazy slice, with each slice element corresponding to one C<take>
+capture.  (A list of C<Capture>s is lazily flattened in normal list context,
 but you may "unflatten" it again with a C<@@()> contextualizer.)
 
 Because C<gather> evaluates its block or statement in void context,
