--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 29 May 2007
+  Last Modified: 2 Jun 2007
   Number: 3
-  Version: 115
+  Version: 116
 
 =head1 Overview
 
@@ -729,16 +729,6 @@ Functions of one argument
 Note that, unlike in Perl 5, you must use the C<.meth> forms to default
 to C<$_> in Perl 6.
 
-=item *
-
-The C<item> contextualizer
-
-    item
-
-The new name for Perl 5's C<scalar> contextualizer.  Equivalent to C<$()>.
-We still call the values scalars, and talk about "scalar operators", but
-scalar operators are those that put their arguments into item context.
-
 =back
 
 =head2 Nonchaining binary precedence
@@ -1297,40 +1287,80 @@ See L<Reduction operators>.
 
 Sigils as contextualizer listops
 
-    $:
-    @:
-    %:
-    &:
-    @@:
+    Sigil       Alpha variant
+    -----       -------------
+    $           item
+    @           list
+    @@          slice
+    %           hash
 
 As listops, these look like terms from the left, but raise their
 precedence on the right sufficiently to govern list infix
 operators:
 
-     $: 1,2 Z 3,4       # [[1,3],[2,4]]
-     @: 1,2 Z 3,4       # 1,3,2,4
-    @@: 1,2 Z 3,4       # [1,3],[2,4]
-     %: 1,2 Z 3,4       # { 1 => 3, 2 => 4 }
+     $ 1,2 Z 3,4       # [\(1,3),\(2,4)]
+     @ 1,2 Z 3,4       # 1,3,2,4
+    @@ 1,2 Z 3,4       # [1,3],[2,4]
+     % 1,2 Z 3,4       # { 1 => 3, 2 => 4 }
 
-     $: 1,2 X 3,4      # [[1,3],[1,4],[2,3],[2,4]]
-     @: 1,2 X 3,4      # 1,3,1,4,2,3,2,4
-    @@: 1,2 X 3,4      # [1,3],[1,4],[2,3],[2,4]
+     $ 1,2 X 3,4      # [\(1,3),\(1,4),\(2,3),\(2,4)]
+     @ 1,2 X 3,4      # 1,3,1,4,2,3,2,4
+    @@ 1,2 X 3,4      # [1,3],[1,4],[2,3],[2,4]
 
 These can also influence the result of functions that returns lists of captures:
 
-     $: map { $_, $_*2 }, ^4   # [[0,0],[1,2],[2,4],[3,6]]
-     @: map { $_, $_*2 }, ^4   # 0,0,1,2,2,4,3,6
-    @@: map { $_, $_*2 }, ^4   # [0,0],[1,2],[2,4],[3,6]
-     %: map { $_, $_*2 }, ^4   # { 0 => 0, 1 => 2, 2 => 4, 3 => 6 }
+     $ map { $_, $_*2 }, ^4   # [\(0,0),\(1,2),\(2,4),\(3,6)]
+     @ map { $_, $_*2 }, ^4   # 0,0,1,2,2,4,3,6
+    @@ map { $_, $_*2 }, ^4   # [0,0],[1,2],[2,4],[3,6]
+     % map { $_, $_*2 }, ^4   # { 0 => 0, 1 => 2, 2 => 4, 3 => 6 }
+
+=item *
+
+The C<item> contextualizer
+
+    item foo()
+
+The new name for Perl 5's C<scalar> contextualizer.  Equivalent to C<$()>.
+We still call the values scalars, and talk about "scalar operators", but
+scalar operators are those that put their arguments into item context.
+
+If given a list, this function makes an C<Array> from it.  The function
+is agnostic about any C<Captures> in such a list.  (Use C<@> or C<@@>
+below to force that one way or the other).
 
 =item *
 
 The C<list> contextualizer
 
-    list
+    list foo()
 
 Forces the subsequent expression to be evaluated in list context.
-Equivalent to C<@:>.
+A list of C<Capture>s will be transformed into a flat list.
+Equivalent to C<@()>.
+
+=item *
+
+The C<slice> contextualizer
+
+    slice foo()
+
+Forces the subsequent expression to be evaluated in slice context.
+(Slices are considered to be potentially multidimensional in Perl 6.)
+A list of C<Capture>s will be transformed into a list of lists.
+Equivalent to C<@@()>.
+
+=item *
+
+The C<hash> contextualizer
+
+    hash foo()
+
+Forces the subsequent expression to be evaluated in hash context.
+The expression is evaluated in list context (flattening any C<Capture>s),
+then a hash will be created from the list, taken as a list of C<Pair>s.
+(Any element in the list that is not a C<Pair> will pretend to be a key
+and grab the next value in the last as its value.)  Equivalent to
+C<%()>.
 
 =back
 
@@ -1408,10 +1438,11 @@ Semicolon: ;
     $x = 1; $y = 2;
 
 The context determines how the expressions terminated by semicolon
-are interpreted.  At statement level they are statements.  Within
-a bracketing construct they are interpreted as multidimension slices.
-(Other contexts may have other interpretations or disallow semicolons
-entirely.)
+are interpreted.  At statement level they are statements.  Within a
+bracketing construct they are interpreted as lists of C<Capture>s,
+which in slice context will be treated as the multiple dimensions of a
+multidimensional slice.  (Other contexts may have other interpretations
+or disallow semicolons entirely.)
 
 =item *
 
@@ -1482,7 +1513,7 @@ Huffman-code the language, while others have changed precedence.
 
 Perl 5's C<${...}>, C<@{...}>, C<%{...}>, etc. dereferencing
 forms are now C<$(...)>, C<@(...)>, C<%(...)>, etc. instead.
-Listop-like forms are C<$:>, C<@:>, C<%:>, etc.
+Listop-like forms use the bare sigil following by whitespace.
 
 =item *
 
@@ -1759,7 +1790,7 @@ extra values if the right side is too long, or assigning undef if the
 right side is too short.  To force list assignment when a subscript
 would return a non-list, either put parens around the entire lvalue,
 or use a comma within the subscript.  (A semicolon in the subscript
-also works to indicate multidimensional slices.)
+also works to indicate a multidimensional slice.)
 
 Assuming
 
@@ -3392,9 +3423,9 @@ Otherwise you'd have to write:
 
 and remember the C<@> at the front until you get to the C<=>.
 
-The empty C<[]> and C<.[]> postfix operators are interpreted as
-zero-dimensional slices returning the entire array, not null slices
-returning no elements.  Likewise for C<{}> and C<.{}> on hashes,
+The empty C<[]> and C<.[]> postfix operators are interpreted as a
+zero-dimensional slice returning the entire array, not as a one-dimensional
+null slice returning no elements.  Likewise for C<{}> and C<.{}> on hashes,
 as well as the C<< <> >>, C<< .<> >>, C<«»>, and C<.«»> constant and
 interpolating slice subscripting forms.
 
