--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 13 Sep 2004
-  Last Modified: 4 Apr 2007
+  Last Modified: 2 Jun 2007
   Number: 9
-  Version: 20
+  Version: 21
 
 =head1 Overview
 
@@ -301,7 +301,7 @@ dimensions.  For example, there are always 12 months in a year and
 
     my @calendar[12;*;24];     # day-of-month dimension unlimited/ragged
 
-You can pass a multislice for the shape as well:
+You can pass a slice (of any dimensionality) for the shape as well:
 
     @@shape = (4;2);
     my int @ints[ [;]@shape ];
@@ -350,12 +350,12 @@ which is equivalent to
 
     @array.postcircumfix:<[ ]>( <== @x[0] <== @x[1] <== @x[2]..*);
 
-Alternately, use a multislice array, indicated by a double C<@@> sigil:
+Alternately, use a slice array, indicated by a double C<@@> sigil:
 
     @array[@@x]
 
 Multislice arrays can keep track of their dimensionality as they
-are being defined.  Use of multislice syntax can then pull out those
+are being defined.  Use of slice array syntax can then pull out those
 distinct dimensions:
 
     my @@x;
@@ -751,9 +751,9 @@ any object that doesn't conform to the variable's shape requirements.
 
 =head1 Subscript and slice notation
 
-A subscript indicates a "slice" of an array.  Each dimension
-of an array is sliced separately, so we say a subscript is a
-semicolon-separated list of slice specifiers, also known as a multislice.
+A subscript indicates a "slice" of an array.  Each dimension of an
+array is sliced separately, so a multidimensional slice subscript
+may be supplied as a semicolon-separated list of slice sublists.
 A three-dimensional slice might look like this:
 
     @x[0..10; 1,0; 1..*:by(2)]
@@ -773,16 +773,18 @@ index value to each slice list:
 =head1 The semicolon operator
 
 At the statement level, a semicolon terminates the current expression.
-Within any kind of bracketing construct, semicolon notionally
-separates slices, the interpretation of which depends on
-the context.  Such a semicolon list always provides list context to
-each of its sublists.  The storage of these sublists is hidden in
-the inner workings of the list.  It does not produce a list of lists. 
+Within any kind of bracketing construct, semicolon notionally separates
+the sublists of a multidimensional slice, the interpretation of
+which depends on the context.  Such a semicolon list puts each of its
+sublists into a Capture, deferring the context of the sublist until
+it is bound somewhere.  The storage of these sublists is hidden in
+the inner workings of the list.  It does not produce a list of lists
+unless the list as a whole is bound into a slice context.
 
 Single dimensional arrays expect simple slice subscripts, meaning
 they will treat a list subscript as a slice in the single dimension of
 the array.  Multi-dimensional arrays, on the other hand, know how to
-handle multiple slices, one for each dimension.  You need not specify
+handle a multidimensional slice, with one subslice for each dimension.  You need not specify
 all the dimensions; if you don't, the unspecified dimensions are
 "wildcarded".  Supposing you have:
 
