--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -391,14 +391,11 @@ more than one element at a time:
 
     for %hash.kv -> $key, $value { print "$key => $value\n" }
 
-To process two arrays in parallel, use the C<each> function:
+To process two arrays in parallel use the C<zip> function to generate a
+list that can be bound to the corresponding number of parameters:
 
-    for each(@a;@b) -> $a, $b { print "[$a, $b]\n" }
-
-or use the C<zip> function to generate a list of C<Seq> objects that each can
-be bound to multiple arguments enclosed in square brackets:
-
-    for zip(@a;@b) -> [$a, $b] { print "[$a, $b]\n" }
+    for zip(@a;@b) -> $a, $b { print "[$a, $b]\n" }
+    for @a Z @b -> $a, $b { print "[$a, $b]\n" }        # same thing
 
 The list is evaluated lazily by default, so instead of using a C<while>
 to read a file a line at a time as you would in Perl 5:
