Added PROCESS as a superglobal namespace for easier apachefication of scripts.
git-svn-id: http://svn.pugscode.org/pugs@23868 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 2 Jun 2007
+  Last Modified: 8 Jun 2007
   Number: 2
-  Version: 109
+  Version: 110
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1460,6 +1460,7 @@ The following pseudo-package names are reserved in the first position:
     MY          # Lexical variables declared in the current scope
     OUR         # Package variables declared in the current package
     GLOBAL      # Builtin variables and functions
+    PROCESS     # process-related globals
     OUTER       # Lexical variables declared in the outer scope
     CALLER      # Contextual variables in the immediate caller's scope
     CONTEXT     # Contextual variables in any context's scope
@@ -1671,6 +1672,28 @@ Truly global variables live in the C<*> package: C<$*UID>, C<%*ENV>.
 (The C<*> may be omitted if you import the name from the C<GLOBAL>
 package.)  C<$*foo> is short for C<$*::foo>, suggesting that the
 variable is "wild carded" into every package.
+
+=item *
+
+For an ordinary Perl program running by itself, the C<GLOBAL> and
+C<PROCESS> namespaces are considered synonymous.  However, it certain
+situations (such as shared hosting under a webserver), the actually
+process may contain multiple virtual processes, each running its own
+"main" code.  In this case, the C<GLOBAL> namespace holds variables
+that properly belong to the individual virtual process, while the
+C<PROCESS> namespace holds variables that properly belong to the actual
+process as a whole.  From the viewpoint of the C<GLOBAL> namespace
+there is little difference, since process variables that normally
+appear in C<GLOBAL> are automatically imported from C<PROCESS>.
+However, the process as a whole may place restrictions on the
+mutability of process variables as seen by the individual subprocesses.
+Also, individual subprocesses may not create new process variables.
+If the process wishes to grant subprocesses the ability to communicate
+via the C<process> namespace, it must supply a writeable hash or some
+such to all the subprocesses granted that privilege.
+
+When these namespaces are distinguished, the C<*> shortcut always refers
+to C<GLOBAL>.  There is no twigil shortcut for C<PROCESS::>.
 
 =item *
 
